--- a/src/main/java/config/application.properties
+++ b/src/main/java/config/application.properties
@@ -1,6 +1,7 @@
-port=12345
-client.name=Client 1
-bs.ipAddress=127.0.0.1
-bs.port=55555
-
+server.name=NodeN
+server.host=10.10.4.9
+server.port=12349
+bootstrap.host=192.248.15.194
+bootstrap.port=55555
 connection.noOfMaxAttempts=3
+files=Adventures of Tintin;Jack and Jill;Glee;The Vampire Diarie
