--- a/src/main/java/config/application.properties
+++ b/src/main/java/config/application.properties
@@ -1,7 +1,8 @@
-server.name=NodeN
-server.host=10.10.4.9
-server.port=12349
-bootstrap.host=192.248.15.194
+server.name=TestNode
+server.host=127.0.0.1
+server.port=12350
+bootstrap.host=127.0.0.1
 bootstrap.port=55555
-connection.noOfMaxAttempts=3
-files=Adventures of Tintin;Jack and Jill;Glee;The Vampire Diarie
+connection.maxAttempt=3
+connection.maxHopCount=5
+files=Test_Subject;Test_Love;Test_Main;King_Arthur
